# forgery_detection_openenv

./: Dockerfile  README.md  Requirements.txt  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py
server/: app.py
