[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgery-detection-openenv"
version = "1.0.0"
description = "A document forgery investigation environment for OpenEnv"
authors = [
    {name = "Aastha Agnihotri"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]